Second Work for Angular

--- a/breakpoint.html
+++ b/breakpoint.html
@@ -2,6 +2,18 @@
 <html>
 <head>
     <title></title>
+
+    <script>
+        var x = window.screenX;
+        var a = 1;
+        var b = 2;
+        var c = 3;
+        var d = a + b;
+        var e = c / d;
+//        alert('final');
+        alert('x = ' + x);
+    </script>
+
 </head>
 <body>
 
