--- a/breakpoint.html
+++ b/breakpoint.html
@@ -10,7 +10,7 @@
         var c = 3;
         var d = a + b;
         var e = c / d;
-        alert('x = ' + x);
+        // alert('x = ' + x);
     </script>
 
 </head>
